== In Git

=== New Features
* New aliases for Scenario Outline in Swedish, Norwegian and English. (Peter Krantz, Aslak Hellesøy)
* Improved build documentation for people who want to contribute. (Aslak Hellesøy)
* Results can now be outputted/parsed in JSON. (Aslak Hellesøy)

== 2.2.9 (2010-10-15)

=== New Features
* PrettyFormatter can format features both with and without ANSI Colors. Using Jansi on Java. (Aslak Hellesøy)
* Extended Java Formatter API with a steps(List<Step>) method for better reporting in Java (Aslak Hellesøy)

== 2.2.8 (2010-10-04)

=== Removed Features
* Trollop based CLI - didn't find a good use for it yet. (Aslak Hellesøy)

== 2.2.7 (2010-10-01)

=== Bugfixes
* I18n.getCodeKeywords() on Java didn't strip '!'. Not anymore. (Aslak Hellesøy)

== 2.2.6 (2010-10-01)

=== Bugfixes
* I18n.getCodeKeywords() on Java included '*'. Not anymore. (Aslak Hellesøy)

== 2.2.5 (2010-10-01)

=== New Features
* Gherkin will scan all top comments for the language comment. (Aslak Hellesøy)

== 2.2.4 (2010-09-22)

=== Bugfixes
* C99 features used by gherkin code (#75 Graham Agnew)

== 2.2.3 (2010-09-21)

=== Bugfixes
* Add back missing development dependency on cucumber (Aslak Hellesøy)

== 2.2.2 (2010-09-21)

=== New Features
* Use json instead of json_pure (Aslak Hellesøy)
* JSON formatter and parser can now omit JSON serialization (for speed) and work directly on objects (Aslak Hellesøy)

== 2.2.1 (2010-09-12)

=== New Features
* Windows gems are now built against 1.8.6-p287 and 1.9.1-p243, on both mswin32 and mingw32, and should work on 1.8.6, 1.8.7, 1.9.1 and 1.9.2 versions of rubyinstaller.org as well as older windows rubies. (Aslak Hellesøy)

=== Changed features
* Build system no longer uses Jeweler - only Rake, Bundler and Rubygems (Aslak Hellesøy)

== 2.2.0 (2010-07-26)

This release breaks some APIs since the previous 2.1.5 release. If you install gherkin 2.2.0 you must also upgrade to
Cucumber 0.9.0.

=== Bugfixes