@@ -1,16 +1,18 @@
 package gherkin.formatter;
 
 import gherkin.formatter.model.*;
+import net.iharder.Base64;
 import org.json.simple.JSONValue;
 
 import java.io.*;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 public class JSONFormatter implements Formatter {
     private final Writer out;
-    private Map featureHash;
+    private Map<Object, Object> featureHash;
 
     public JSONFormatter(Writer out) {
         this.out = out;
@@ -48,11 +50,19 @@ public class JSONFormatter implements Formatter {
     }
 
     public void match(Match match) {
-        //To change body of implemented methods use File | Settings | File Templates.
+        getLastStep().put("match", match.toMap());
     }
 
     public void result(Result result) {
-        //To change body of implemented methods use File | Settings | File Templates.
+        getLastStep().put("result", result.toMap());
+    }
+
+    public void embedding(final String mimeType, final byte[] data) {
+        final Map<String,String> embedding = new HashMap<String,String>(){{
+            put("mime_type", mimeType);
+            put("data", Base64.encodeBytes(data));
+        }};
+        getEmbeddings().add(embedding);
     }
 
     public void eof() {
@@ -75,34 +85,47 @@ public class JSONFormatter implements Formatter {
     public void steps(List<Step> steps) {
     }
 
-    private List getFeatureElements() {
-        List featureElements = (List) featureHash.get("elements");
+    private List<Object> getFeatureElements() {
+        List<Object> featureElements = (List) featureHash.get("elements");
         if (featureElements == null) {
-            featureElements = new ArrayList();
+            featureElements = new ArrayList<Object>();
             featureHash.put("elements", featureElements);
         }
         return featureElements;
     }
 
-    private Map getFeatureElement() {
+    private Map<Object,List<Object>> getFeatureElement() {
         return (Map) getFeatureElements().get(getFeatureElements().size() - 1);
     }
 
-    private List getAllExamples() {
-        List allExamples = (List) getFeatureElement().get("examples");
+    private List<Object> getAllExamples() {
+        List<Object> allExamples = getFeatureElement().get("examples");
         if (allExamples == null) {
-            allExamples = new ArrayList();
+            allExamples = new ArrayList<Object>();
             getFeatureElement().put("examples", allExamples);
         }
         return allExamples;
     }
 
-    private List getSteps() {
-        List steps = (List) getFeatureElement().get("steps");
+    private List<Object> getSteps() {
+        List<Object> steps = getFeatureElement().get("steps");
         if (steps == null) {
-            steps = new ArrayList();
+            steps = new ArrayList<Object>();
             getFeatureElement().put("steps", steps);
         }
         return steps;
+    }
+
+    private Map<Object,Object> getLastStep() {
+        return (Map) getSteps().get(getSteps().size() - 1);
+    }
+
+    private List getEmbeddings() {
+        List<Object> embeddings = (List<Object>) getLastStep().get("embeddings");
+        if(embeddings == null) {
+            embeddings = new ArrayList<Object>();
+            getLastStep().put("embeddings", embeddings);
+        }
+        return embeddings;
     }
 }
