@@ -1,6 +1,7 @@
 package gherkin.formatter.model;
 
 import gherkin.formatter.Argument;
+import gherkin.formatter.Formatter;
 import gherkin.formatter.Mappable;
 
 import java.util.List;
@@ -20,5 +21,9 @@ public class Match extends Mappable {
 
     public String getLocation() {
         return location;
+    }
+
+    public void replay(Formatter formatter) {
+        formatter.match(this);
     }
 }
