@@ -5,11 +5,7 @@ import gherkin.formatter.Formatter;
 import gherkin.lexer.I18nLexer;
 import gherkin.lexer.Listener;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
